Matrix and single choice definition

--- a/templates/default/tpl.field_def_data_table_row.html
+++ b/templates/default/tpl.field_def_data_table_row.html
@@ -6,6 +6,7 @@
 	</td>
 	<!-- END sortable -->
 	<td class="std small">{VAL_NAME}</td>
+	<td class="std small">{VAL_SHORT_TITLE}</td>
 	<td class="std small">{VAL_TYPE}</td>
 	<td class="std small">
 		<input type="checkbox" name="required[{VAL_ID}]" value="1" {REQUIRED_CHECKED} />
